fix: article image alignment and sizing (#1050)
## Overview

> [!IMPORTANT]
> **To Do**
> - [x] Extract ee9838c and b7d7df7 to separate PR.
> - [ ] Update image thumbnail opts of all sites that have News.
> - [ ] Prepare to [offset small main
image](https://github.com/user-attachments/assets/a97471ce-209a-4691-bdcc-5da827207c49)
instead of [just
align](https://github.com/user-attachments/assets/51ef1107-1bb5-40a7-8e07-79b5947a3380).

Fix alignment and size of:

1. main image (on news article page):
    - narrow image, narrow screen
    - full-width image[^1], narrow screen
    - narrow image, wide screen
    - full-width image[^1], wide screen
2. thumbnail image (on news feed page and embed):
    - narrow image, narrow screen
    - full-width image[^1], narrow screen
    - narrow image, wide screen
    - full-width image[^1], wide screen

[^1]: I.e. use a Thumbnail Option with `width` of `0`.

## Related

- [RT
#37827](https://tickets.tacc.utexas.edu/Ticket/Display.html?id=37827)

## Changes

- **renamed** mixins to express what its styles do
    - `news-article-page__media--slim-context` → `…--layout-center`
    - `news-article-page__media--wide-context` → `…--layout-float`
- **changed** mixin `…--layout-center` to be used **only** if main image
thumb. opt. has `0` width
- **fixed** unaligned blog content images
- **deleted** unnecessary code
- **fixed** large article list image from overflowing list
- **fixed** small article list image from not filling item
- **changed** overwritten code to be reminder comment instead
- **moved** mixins `news-article-page__media--…`
    - from `x-news.css`
    - to `django.cms.blog.app.page.css`
- **changed** markup of form to choose news list layout
- **added** thumb. opt. values into HTML (for CSS)
	- `data-width`
	- `data-height`

## Testing

Given an article main image of thumbnail size with **width = 0**:
- On news **article page**, that image should be:
    - as wide as content
- On news **feed page** (and **feed embed**):

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.page.css
@@ -81,6 +81,20 @@ Styleguide Components.DjangoCMS.Blog.App.Page
 /* To support vertical layouts at narrow viewports */
 :--news-article-page .blog-visual {
   @mixin news-article-page__media;
+
+  @media (--medium-and-below) {
+    & {
+      @mixin news-article-page__media--layout-center;
+    }
+  }
+  @media (--medium-and-above) {
+    &:has([data-width="0"]) {
+      @mixin news-article-page__media--layout-center;
+    }
+    &:not(:has([data-width="0"])) {
+      @mixin news-article-page__media--layout-float;
+    }
+  }
 }
 
 /* To prevent footer on left side of page */
@@ -175,6 +189,15 @@ Styleguide Components.DjangoCMS.Blog.App.Page
   :--news-article-page .blog-content .align-right,
   :--news-article-page .blog-content .align-left {
     max-width: 100%;
+
+    /* So figure or linked image will center if not aligned */
+    &:is(a, figure) {
+      margin-inline: auto;
+    }
+    &:is(a) {
+      display: block;
+      width: fit-content;
+    }
   }
   :--news-article-page .blog-content .align-right,
   :--news-article-page .blog-content .align-left {
